<resources>
    <string name="app_name">Whether Cast</string>
    <string name="whether_cast">Whether Cast</string>
    <string name="design_by_n_alx">design by:\n Alx</string>
    <string name="whether_img">whether_img</string>
    <string name="_0_0">0:0℃</string>
    <string name="today">Today</string>
    <string name="max_00_00">MAX: 00:00℃</string>
    <string name="_22_oct_2023">22 Oct 2023</string>
    <string name="sunday">Sunday</string>
    <string name="min_00_00">MIN : 00:00℃</string>
    <string name="sunny">SUNNY</string>
    <string name="sea">Sea</string>
    <string name="_0000_hpa">0000 hPa</string>
    <string name="conditions">Conditions</string>
    <string name="OPEN_WEATHER_MAP_API_KEY">754fcdfe1a6ac4bff11e41e6ebaf8471</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="todo">TODO</string>
    <string name="_0_0_per">0.0 %</string>
    <string name="_00_00_m_s">00:00 m/s</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_00_00_time">00:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
</resources>