<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/sunny_bg"
    android:padding="0dp"
    tools:context=".MainActivity">


    <SearchView
        android:id="@+id/srch"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_bg"
        android:iconifiedByDefault="false"
        android:queryHint="Enter a city"
        android:searchIcon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/loctaion"
        app:layout_constraintEnd_toEndOf="@+id/srch"
        app:layout_constraintStart_toStartOf="@+id/srch"
        app:layout_constraintTop_toBottomOf="@+id/srch" />

    <TextView
        android:id="@+id/tvCurDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/tvCity"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tvTemparature"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/srch"
        app:layout_constraintTop_toBottomOf="@+id/tvCity"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sunny_new" />

    <TextView
        android:id="@+id/tvTemparature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/_0_0"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/tvCity"
        app:layout_constraintTop_toBottomOf="@+id/tvCurDate" />

    <TextView
        android:id="@+id/tvWType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/sunny"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/tvMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/max_00_00"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCurDate"
        app:layout_constraintStart_toStartOf="@+id/tvCurDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTemparature" />

    <TextView
        android:id="@+id/tvMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/min_00_00"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvMaxTemp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvMaxTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxTemp" />

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sunday"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinTemp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:hint="@string/_22_oct_2023"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinTemp"
        app:layout_constraintVertical_bias="0.502" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="430dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/framebg"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/framebg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0_0_per"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="#2B2B2B"
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/framebg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/wind_speed"
                        android:src="@drawable/wind" />

                    <TextView

                        android:id="@+id/tvWindSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_00_00_m_s"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wind_speed"
                        android:textColor="#2B2B2B"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/framebg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/conditions"
                        android:src="@drawable/conditions" />

                    <TextView

                        android:id="@+id/tvCondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sunny"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/conditions"
                        android:textColor="#2B2B2B"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/framebg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/sunrise"
                        android:src="@drawable/sunrise" />

                    <TextView

                        android:id="@+id/tvSunrise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_00_00_time"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sunrise"
                        android:textColor="#2B2B2B"
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/framebg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/sunset"
                        android:src="@drawable/sunset" />

                    <TextView

                        android:id="@+id/tvSunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_00_00_time"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sunset"
                        android:textColor="#2B2B2B"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/framebg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/sea"
                        android:src="@drawable/sea" />

                    <TextView

                        android:id="@+id/tvSeaLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0000_hpa"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sea"
                        android:textColor="#2B2B2B"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-39dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>