<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/white_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/whether_img" />

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/lottieAnime"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"-->
<!--        app:lottie_rawRes="@raw/loading" />-->

    <TextView
        android:id="@+id/apk_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:text="@string/whether_cast"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="@string/design_by_n_alx"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/apk_name"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="@+id/apk_name"
        app:layout_constraintTop_toBottomOf="@+id/apk_name"
        app:layout_constraintVertical_bias="0.879" />

</androidx.constraintlayout.widget.ConstraintLayout>